--- a/AppMVC/AppMVC.csproj
+++ b/AppMVC/AppMVC.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="bootstrap" Version="5.3.3" />
+    </ItemGroup>
+
 </Project>
