--- a/AppMVC/AppMVC.csproj
+++ b/AppMVC/AppMVC.csproj
@@ -12,6 +12,19 @@
 
     <ItemGroup>
       <PackageReference Include="bootstrap" Version="5.3.3" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.11" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Comment\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Tag\Index.cshtml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="NLog.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
